--- a/jor/Gemfile
+++ b/jor/Gemfile
@@ -5,7 +5,10 @@ gem 'rails', '3.2.8'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'mysql2'
+group :development, :test do
+  gem 'mysql2'
+  gem 'rspec-rails', '2.11.0'
+end
 
 
 # Gems used only for assets and not required
@@ -25,6 +28,10 @@ gem 'jquery-rails'
 gem 'execjs'
 
 gem 'therubyracer'
+
+group :test do
+  gem 'capybara', '1.1.2'
+end
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
