--- a/jor/Gemfile
+++ b/jor/Gemfile
@@ -33,6 +33,7 @@ gem 'therubyracer'
 
 group :test do
   gem 'capybara', '1.1.2'
+  gem 'factory_girl_rails', '4.1.0'
 end
 
 # To use ActiveModel has_secure_password
