- sign in functionality - updated layout for signed in users - added bootstrap javascript - added security for travellers - added admin boolean for admins - added dashboard for signed in users

--- a/jor/Gemfile
+++ b/jor/Gemfile
@@ -21,6 +21,7 @@ group :assets do
   # gem 'therubyracer', :platforms => :ruby
 
   gem 'uglifier', '>= 1.0.3'
+  gem "twitter-bootstrap-rails"
 end
 
 gem 'jquery-rails'
@@ -35,9 +36,6 @@ group :test do
   gem 'capybara', '1.1.2'
   gem 'factory_girl_rails', '4.1.0'
 end
-
-# To use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.0.0'
 
 # To use Jbuilder templates for JSON
 # gem 'jbuilder'
